--- a/package.json
+++ b/package.json
@@ -12,13 +12,35 @@
 		"@mdx-js/loader": "^3.0.1",
 		"@mdx-js/react": "^3.0.1",
 		"@next/mdx": "^14.2.5",
+		"@next/third-parties": "^14.2.5",
+		"@radix-ui/react-icons": "^1.3.0",
+		"@react-email/components": "^0.0.21",
+		"@supabase/ssr": "^0.4.0",
+		"@supabase/supabase-js": "^2.44.4",
 		"@types/mdx": "^2.0.13",
+		"amazon-product-api": "^0.4.4",
+		"axios": "^1.7.2",
+		"cheerio": "1.0.0-rc.12",
+		"contentlayer": "^0.3.4",
+		"dub": "^0.34.1",
+		"fs": "0.0.1-security",
+		"lucide-react": "^0.411.0",
 		"next": "14.2.5",
 		"next-mdx-remote": "^5.0.0",
 		"next-sitemap": "^4.2.3",
+		"path": "^0.12.7",
 		"pnpm": "^9.5.0",
+		"radix-ui": "^1.0.1",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"rehype-autolink-headings": "^7.1.0",
+		"rehype-external-links": "^3.0.0",
+		"rehype-pretty-code": "^0.13.2",
+		"rehype-slug": "^6.0.0",
+		"remark-gfm": "^4.0.0",
+		"resend": "^3.4.0",
+		"shiki": "^1.11.0",
+		"sonner": "^1.5.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
