--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@fortawesome/free-brands-svg-icons": "^6.6.0",
+		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@mdx-js/loader": "^3.0.1",
 		"@mdx-js/react": "^3.0.1",
 		"@next/mdx": "^14.2.5",
 		"@next/third-parties": "^14.2.5",
 		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-navigation-menu": "^1.2.0",
 		"@react-email/components": "^0.0.21",
 		"@supabase/ssr": "^0.4.0",
 		"@supabase/supabase-js": "^2.44.4",
 		"@types/mdx": "^2.0.13",
+		"@vercel/edge-config": "^1.2.1",
 		"amazon-product-api": "^0.4.4",
 		"axios": "^1.7.2",
 		"cheerio": "1.0.0-rc.12",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
 		"contentlayer": "^0.3.4",
 		"dub": "^0.34.1",
 		"fs": "0.0.1-security",
@@ -40,7 +46,8 @@
 		"remark-gfm": "^4.0.0",
 		"resend": "^3.4.0",
 		"shiki": "^1.11.0",
-		"sonner": "^1.5.0"
+		"sonner": "^1.5.0",
+		"tailwind-merge": "^2.4.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
