--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"lucide-react": "^0.411.0",
 		"next": "14.2.5",
 		"next-mdx-remote": "^5.0.0",
+		"next-plausible": "^3.12.0",
 		"next-sitemap": "^4.2.3",
 		"path": "^0.12.7",
 		"pnpm": "^9.5.0",
