--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@fortawesome/free-brands-svg-icons": "^6.6.0",
+		"@fortawesome/free-solid-svg-icons": "^6.6.0",
 		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@mdx-js/loader": "^3.0.1",
 		"@mdx-js/react": "^3.0.1",
@@ -17,6 +18,7 @@
 		"@next/third-parties": "^14.2.5",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-navigation-menu": "^1.2.0",
+		"@radix-ui/react-slot": "^1.1.0",
 		"@react-email/components": "^0.0.21",
 		"@supabase/ssr": "^0.4.0",
 		"@supabase/supabase-js": "^2.44.4",
@@ -29,6 +31,7 @@
 		"clsx": "^2.1.1",
 		"contentlayer": "^0.3.4",
 		"dub": "^0.34.1",
+		"embla-carousel-react": "^8.1.7",
 		"fs": "0.0.1-security",
 		"lucide-react": "^0.411.0",
 		"next": "14.2.5",
