--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@react-email/components": "^0.0.21",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.4",
@@ -36,6 +37,7 @@
     "fs": "0.0.1-security",
     "lucide-react": "^0.411.0",
     "next": "14.2.5",
+    "next-axiom": "^1.5.1",
     "next-mdx-remote": "^5.0.0",
     "next-plausible": "^3.12.0",
     "next-sitemap": "^4.2.3",
