--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "contentlayer": "^0.3.4",
     "dub": "^0.34.1",
     "embla-carousel-react": "^8.1.7",
+    "framer-motion": "^11.5.6",
     "fs": "0.0.1-security",
     "lucide-react": "^0.411.0",
     "next": "14.2.5",
