--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "crons": [
     {
       "path": "/api/cron/finance-video",
-      "schedule": "0 23 * * *"
+      "schedule": "0 19 * * 5"
     }
   ]
 }
