--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@supabase/supabase-js": "^2.44.4",
     "@tailwindcss/typography": "^0.5.13",
     "@types/mdx": "^2.0.13",
+    "@vercel/analytics": "^1.4.1",
     "@vercel/edge-config": "^1.2.1",
     "amazon-product-api": "^0.4.4",
     "axios": "^1.7.2",
