--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "embla-carousel-react": "^8.1.7",
     "framer-motion": "^11.5.6",
     "fs": "0.0.1-security",
+    "geist": "^1.4.2",
     "lucide-react": "^0.411.0",
     "next": "14.2.10",
     "next-axiom": "^1.5.1",
@@ -51,6 +52,7 @@
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hotkeys-hook": "^5.1.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-external-links": "^3.0.0",
     "rehype-pretty-code": "^0.13.2",
